# my_financial_tracker_mcp

./: .env.example  .gitignore  .mcp.json  README.md  mcp_config.json  pyproject.toml  token.pickle
.devcontainer/: Dockerfile  README.md  devcontainer.json
credentials/: README.md  token_.json.old
my_financial_tracker_mcp/: __init__.py  __main__.py  server.py
my_financial_tracker_mcp/database/: categories.py  database.py  financial_event.py  invoices.py  my_fin_trace.db  receipts.py
my_financial_tracker_mcp/documentation/: README.md
my_financial_tracker_mcp/llm/: llm.py
my_financial_tracker_mcp/models/: event.py  receipt.py  text_analysis.py  time.py  transaction.py
my_financial_tracker_mcp/prompt/: categories.py  invoices.py  receipts.py
my_financial_tracker_mcp/services/: financial_events.py  google_calendar.py  google_drive.py  google_vision.py
my_financial_tracker_mcp/templates/: consent.html  consent_expired.html  gmail_success.html
my_financial_tracker_mcp/tools/: financial_events.py  invoices.py  receipts.py
my_financial_tracker_mcp/validators/: invoices.py  receipts.py
my_financial_tracker_mcp/web_services/: payments.py
