[project]
name = "mcp-example"
version = "0.2.0"
description = "State-of-the-art MCP server showcasing MCP primitives, OCR, and AI automation"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastmcp>=2.0.0",
    "google-api-python-client>=2.169.0",
    "google-auth>=2.40.2",
    "google-auth-oauthlib>=1.0.0",
    "uvicorn>=0.34.3",
    "click>=8.1.8",
    "pytz>=2024.1",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0.0",

    # OCR stack
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",

    # 🆕 Google Vision OCR
    "google-cloud-vision>=3.7.0",

    # LLM
    "google-genai>=0.5.0",

    #GOOGLE CALENDAR
    "google-auth-httplib2",

    #FastAPI
    "fastapi>=0.110.0"
]

[project.scripts]
mcp-server = "my_financial_tracker_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["my_financial_tracker_mcp"]
